Removed: Unneeded install_* classes from the provided stylesheets. Fixed: Removed align="middle" from images on all pages because they look out of place in the newer Gecko engine builds (FireFox 1.5) Fixed: Thread list "there are no messages in this mode" text eas stuck to the bottom of the drop down in newer Gecko engine builds (FireFox 1.5)

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -523,14 +523,14 @@ a {
     border-left-width: 0px
 }
 
-.bhinputtext, .bhtextarea, .bhselect,.logon_dropdown,
-.search_dropdown, .banned_dropdown, .links_dropdown,
-.admin_startpage_textarea, .dictionary_word_display,
-.dictionary_best_selection, .dictionary_change_to,
-.post_folder_dropdown,.thread_title, .post_to_others,
-.post_content, .signature_content, .to_uid_dropdown,
-.recipient_dropdown, .recent_user_dropdown,
-.user_in_thread_dropdown, .text_captcha_input {
+.bhinputtext, .bhtextarea, .bhselect,
+.logon_dropdown, .register_dropdown, .search_dropdown,
+.banned_dropdown, .links_dropdown, .admin_startpage_textarea,
+.dictionary_word_display, .dictionary_best_selection,
+.dictionary_change_to, .post_folder_dropdown,
+.thread_title, .post_to_others, .post_content,
+.signature_content, .to_uid_dropdown, .recipient_dropdown,
+.recent_user_dropdown, .user_in_thread_dropdown {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 9pt;
     color: #000000;
@@ -771,10 +771,6 @@ a {
 
 .post_content {
     width: 480px;
-}
-
-.install_dropdown {
-    width: 234px;
 }
 
 .logon_dropdown {
