--- a/forum/styles/apple/style.css
+++ b/forum/styles/apple/style.css
@@ -547,7 +547,7 @@ a {
       border-left-width: 0px
 }
 
-.bhinputtext, .bhtextarea, .bhselect, .install_dropdown,
+.bhinputtext, .bhtextarea, .bhselect,
 .logon_dropdown, .register_dropdown, .search_dropdown,
 .banned_dropdown, .links_dropdown, .admin_startpage_textarea,
 .dictionary_word_display, .dictionary_best_selection,
@@ -755,10 +755,6 @@ a {
     border: 1px solid #777777;
     padding: 5px;
     margin: 5px;
-}
-
-.install_dropdown{
-    width: 234px;
 }
 
 .logon_dropdown {
